# squirrelmail-src

./: ChangeLog  Makefile  Makefile.in  README  README.known_issues  README.ssl  configure  imapproxy.spec  pkginfo
class/: html.class.php  mime.class.php
config/: conf.pl  config_default.php  config_local.php
contrib/: decrypt_headers.php
decode/: ChangeLog.decode  README  README.decode  ReleaseNotes.decode  install  version
doc/: ChangeLog  index.html  translating.txt
documentation/: README  site_footer.html  site_header.html
functions/: abook_database.php  abook_ldap_server.php  abook_local_file.php  addressbook.php  attachment_common.php  auth.php  constants.php  db_prefs.php  display_messages.php  file_prefs.php  forms.php  gettext.php  global.php  html.php  i18n.php  identity.php  imap_general.php  imap_mailbox.php  imap_messages.php  imap_search.php  imap_utf7_local.php  mailbox_display.php  mime.php  options.php  plugin.php  prefs.php  strings.php  tree.php  url_parser.php
imap_proxy/: COPYING  ChangeLog  Makefile.in  Makefile.linux  README  README.debian  README.known_issues  README.ssl  config.h.in  configure  configure.in  copyright  imapproxy.spec  pkginfo  prototype
include/: common.h  imapproxy.h  load_prefs.php
locales/: ChangeLog  ChangeLog.locales  README  ReleaseNotes  ReleaseNotes.locales  TRANSLATORS  buildpackages  compilelocales  essential_files  extract-plugin  install  mergeall  mergepo  quick-stats  squirrelmail.po  teamnames  version  xgetpo
plugins/: ChangeLog.plugins
po/: squirrelmail.pot  xgetpo
scripts/: imapproxy.conf
sm2/: AUTHORS  compose.php  folder_list.php  login.php  post_login.php
sm2-api/: TODO  ZkConstants.php  ZkFunctions.php  ZkLoader.php  index.html
sm2-planning/: README  config_revisions.php  dev_todo.php  developer.css  plugin_revisions.php  template.txt
smdoc/: .SM_README.swp  .cvsignore  CHANGELOG  README  SM_README  config.default.php  file.thing.file.php  header.php  index.php  makedoc.sh  mysql.sql  site-config.sample.php  smdoc_init.php  sqmail.thing.nothingfound.php  sqmail.thing.siteindex.php  sqmail.thing.useradmin.php  sqmail.wikimenu.php  sqmchanges.php  sqmcreate.php  sqmdocs.php  sqmgroup.php  sqmindex.php  sqmsearch.php  sqmtools.php  sqmuser.php  style.css  wiki.class.wikipage.php  wiki.config.php  wtf.class.content.php  wtf.class.definition.php  wtf.class.hardthing.php  wtf.class.thing.php  wtf.class.thread.php  wtf.class.user.php  wtf.class.workspace.php  wtf.config.php  wtf.defaults.php  wtf.func.php  (+4 more)
src/: icc.c  (+25 more)
trunk/imap_proxy/: ChangeLog  Makefile  Makefile.in  Makefile.linux  README  README.debian  README.known_issues  README.ssl  config.h.in  configure.in  copyright  imapproxy.spec  pkginfo  prototype
trunk/imap_proxy/include/: common.h  imapproxy.h
trunk/imap_proxy/scripts/: imapproxy  imapproxy-bsd.init  imapproxy-linux.init  imapproxy.conf  imapproxy.init  pimpdaddy  rc.pimpdaddy
trunk/imap_proxy/src/: becomenonroot.c  config.c  hash.c  icc.c  imapcommon.c  logging.c  main.c  pimpstat.c  request.c  select.c  threads.c
(+8255 files in other folders)
